--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,6 +1,5 @@
-/* Override some defaults */
-html, body {
-  background-color: #eee;
+body {
+    padding-top: 80px;
 }
 .navbar {
   margin-bottom: 0;
@@ -10,26 +9,6 @@ html, body {
 }
 .container > footer p {
   text-align: center; /* center align it with the container */
-}
-
-/* The white background content wrapper */
-.content {
-  background-color: #fff;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
-}
-
-/* Page header tweaks */
-.page-header {
-  background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
 }
 
 .topbar .btn {
@@ -46,6 +25,7 @@ html, body {
 	overflow:hidden;
 }
 .tag_box li {
+    float: left;
 	line-height:28px;
 }
 .tag_box.inline li {
@@ -68,4 +48,11 @@ html, body {
 	border:1px solid #4C964D;
 	color:#FFF;
 }
-	
+
+.contact {
+    text-align: right;
+}
+
+.bio {
+    margin-bottom: 40px;
+}
