--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -5,9 +5,11 @@
 <div class="row">
   <div class="span10">
     {{ content }}
+
     <hr>
-    <div class="pagination">
-      <ul>
+      {% include themes/twitter/post_share.html %}
+
+      <ul class="pagination">
       {% if page.previous %}
         <li class="prev"><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
       {% else %}
@@ -20,7 +22,6 @@
         <li class="next disabled"><a>Next &rarr;</a>
       {% endif %}
       </ul>
-    </div>
     <hr>
     {% include JB/comments %}
   </div>
@@ -31,10 +32,10 @@
 
   {% unless page.tags == empty %}
     <h4>Tags</h4>
-    <ul class="tag_box">
+    <div>
     {% assign tags_list = page.tags %}
     {% include JB/tags_list %}
-    </ul>
+    </div>
   {% endunless %}
   </div>
 </div>
