--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -27,7 +27,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="{{ HOME_PATH }}">Project name</a>
+          <a class="brand" href="{{ HOME_PATH }}">Speanet.info</a>
           <div class="nav-collapse collapse">
               <ul class="nav">
                   {% assign pages_list = site.pages %}
