Added legal notice. Configured google analytics.

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -44,11 +44,9 @@
         {{ content }}
       </div>
 
-      <footer>
-        <p>&copy; {{ site.author.name }} 2012
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
-        </p>
+      <footer class="footer">
+          <hr />
+          <p>&copy; {{ site.author.name }} 2013 - <a href="/legal-notice.html">Legal Notice</a></p>
       </footer>
 
     </div> <!-- /container -->
