--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -16,6 +16,7 @@
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/bootstrap/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/php-pygmentize.css" rel="stylesheet" type="text/css" media="all">
   </head>
 
   <body>
